--- a/.github/workflows/RunFunction.yml
+++ b/.github/workflows/RunFunction.yml
@@ -2,8 +2,9 @@ name: 修改微信步数
 
 on:
   workflow_dispatch:
-#  schedule:
-#    - cron: '0 9,12 * * *'
+  
+  schedule:
+  - cron: '50 12 * * *'
 
 jobs: 
   ChangBuShu: 
